--- a/rrmMain.ipynb
+++ b/rrmMain.ipynb
@@ -37,48 +37,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
-   "source": [
-    "def print_table(**kwargs):\n",
-    "    snoop_dog(y=5,**kwargs)\n",
-    "\n",
-    "def snoop_dog(x=1,y=2):\n",
-    "    '''a+=1\n",
-    "    kwargs = {'a':a,'x':x,'y':y}\n",
-    "    if a == 3:\n",
-    "        return\n",
-    "    return snoop_dog(**kwargs)'''\n",
-    "    print(x+y)\n",
-    "    \n",
-    "def shwoop_dog(m=3,n=2):\n",
-    "    assert(m<5)\n",
-    "    print(m-n)\n",
-    "    \n",
-    "snoop_dog(x=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Nash(Bank):\n",
     "\n",
     "    def I(self,a,b,c):\n",
+    "        '''\n",
+    "        Make a column for the expected interest rate.\n",
+    "        '''\n",
     "        return a+b*self.table['Inflation']+c*self.table['OutGap']\n",
     "\n",
     "    def addZLZR(self,theta):\n",
+    "        '''\n",
+    "        Add columns for the constants of the right and left decisive voters.\n",
+    "        '''\n",
     "        \n",
     "        aR=theta[0]; aL=theta[1]; aC=theta[2]; b=theta[3]; c=theta[4]\n",
     "\n",
@@ -87,6 +61,9 @@
     "        self.table['zR'] = i-self.I(aR,b,c)\n",
     "        \n",
     "    def addILIR(self,theta,zeta='zeta'):\n",
+    "        '''\n",
+    "        Add columns for the ideal interest rate of the left and right decisive voters.\n",
+    "        '''\n",
     "        \n",
     "        aR=theta[0]; aL=theta[1]; aC=theta[2]; b=theta[3]; c=theta[4]\n",
     "        \n",
@@ -94,6 +71,9 @@
     "        self.table['IR_'+zeta] = self.I(aR,b,c)+self.table[zeta]\n",
     "        \n",
     "    def G(self,theta,stepApprox=norm.cdf,zeta='zeta',target='Target'):\n",
+    "        '''\n",
+    "        Approximate the stepwise cdf as a continuous funciton.\n",
+    "        '''\n",
     "        \n",
     "        aR=theta[0]; aL=theta[1]; aC=theta[2]; b=theta[3]; c=theta[4];\n",
     "        mu=theta[5]; s=theta[6]; pC=theta[7]; sigma=theta[8]; eps=theta[9]\n",
@@ -103,6 +83,9 @@
     "        return self.table['G']\n",
     "    \n",
     "    def g(self,theta,zeta='zeta',target='Target',stepApproxPDF=norm.pdf):\n",
+    "        '''\n",
+    "        Approximate the stepwise pdf as a continuous function.\n",
+    "        '''\n",
     "\n",
     "        aR=theta[0]; aL=theta[1]; aC=theta[2]; b=theta[3]; c=theta[4];\n",
     "        mu=theta[5]; s=theta[6]; pC=theta[7]; sigma=theta[8]; eps=theta[9]\n",
@@ -112,12 +95,13 @@
     "        return self.table['g']\n",
     "    \n",
     "    ######################################\n",
-    "    #                                    #\n",
     "    #      Solving for rho and zeta      #\n",
-    "    #                                    #\n",
     "    ######################################\n",
     "\n",
     "    def guessRho(self,theta,zeta='zeta',target='target'):\n",
+    "        '''\n",
+    "        Initialize rho as 1 minus the cdf evaluated at mu. \n",
+    "        '''\n",
     "        \n",
     "        aR=theta[0]; aL=theta[1]; aC=theta[2]; b=theta[3]; c=theta[4];\n",
     "        mu=theta[5]; s=theta[6]; pC=theta[7]; sigma=theta[8]; eps=theta[9]\n",
@@ -129,6 +113,9 @@
     "        return rho\n",
     "    \n",
     "    def giveZ(self,theta,plot=False,zeta='zeta',target='Target',rho='rho_zeta',chairman=False):\n",
+    "        '''\n",
+    "        Given rho, approximate z.\n",
+    "        '''\n",
     "        \n",
     "        aR=theta[0]; aL=theta[1]; aC=theta[2]; b=theta[3]; c=theta[4];\n",
     "        mu=theta[5]; s=theta[6]; pC=theta[7]; sigma=theta[8]; eps=theta[9]\n",
@@ -160,6 +147,9 @@
     "\n",
     "        \n",
     "    def giveRho(self,theta,zeta='zeta',target='Target',new=False,F=logistic.cdf):\n",
+    "        '''\n",
+    "        Given Z, approximate rho.\n",
+    "        '''\n",
     "        \n",
     "        aR=theta[0]; aL=theta[1]; aC=theta[2]; b=theta[3]; c=theta[4];\n",
     "        mu=theta[5]; s=theta[6]; pC=theta[7]; sigma=theta[8]; eps=theta[9]\n",
@@ -180,6 +170,9 @@
     "    \n",
     "    \n",
     "    def getRhoZHelper(self,theta,zeta='zeta',target='Target',conv=0.0001,printN=False,n=0):\n",
+    "        '''\n",
+    "        Recursively estimate rho and Z until convergence.\n",
+    "        '''\n",
     "        \n",
     "        aR=theta[0]; aL=theta[1]; aC=theta[2]; b=theta[3]; c=theta[4];\n",
     "        mu=theta[5]; s=theta[6]; pC=theta[7]; sigma=theta[8]; eps=theta[9]\n",
@@ -226,9 +219,7 @@
     "        return self.getRhoZHelper(theta,zeta,target,conv,printN,n)\n",
     "    \n",
     "    ######################################\n",
-    "    #                                    #\n",
     "    #      Code for Gradient Ascent      #\n",
-    "    #                                    #\n",
     "    ######################################\n",
     "    \n",
     "    def chairmanHelper(self,theta,zeta='zeta'):\n",
@@ -368,6 +359,9 @@
     "\n",
     "        #return self.gradAscentNash(worseWeight*alpha,estimate,conv,ll,est,worseWeight,betterWeight,n,m,v)\n",
     "            \n",
+    "    ######################################\n",
+    "    #      Checks for grad ascent        #\n",
+    "    ######################################\n",
     "    \n",
     "    def compareGradToLLN(self,theta,epsilon=0.00001,delta=0.001,start=0,end=9):\n",
     "        \n",
@@ -411,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,27 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "BoC.table['ChangeSign'][BoC.table['ChangeSign']==0].size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -686,9 +660,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "aR\n",
+      "85.23131928277961\n",
+      "30.407704798562914\n",
+      "aL\n",
+      "-31.391224445507632\n",
+      "-31.387230592372358\n",
       "aC\n",
-      "-3.3524535686766455\n",
-      "-1.2630039236682933\n",
+      "-0.003971570222163847\n",
+      "0.00011368683772161602\n",
+      "b\n",
+      "151.26444292908243\n",
+      "65.5013536743354\n",
+      "c\n",
+      "-19.01199073158295\n",
+      "-41.497401070955675\n",
+      "mu\n",
+      "0.0864653240683814\n",
+      "0.07048583938740194\n",
+      "s\n",
+      "0.2656504651882465\n",
+      "0.2879687599488534\n",
+      "pC\n",
+      "-3.619818784362465\n",
+      "-3.9941596696735355\n",
+      "sigma\n",
+      "422.67428077553507\n",
+      "315.792362926004\n",
       "Done!\n"
      ]
     }
@@ -719,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,6 +738,13 @@
    "metadata": {},
    "source": [
     "## Grad Ascent MLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "fsdkafjklsdjfal;sjdfjklfklsjsa"
    ]
   },
   {
@@ -6759,57 +6764,6 @@
     "| Bank of Canada Core CPI |1.80539449|3.84184997|2.7800699|0.19361319|-0.89938782|1.9975356|2.37650492|1.0|1.04782968|0.2|\n",
     "| Fed |0.96405556|3.72723961|2.35336394|0.6964615|-2.69918336|-0.08721112|2.84102282|1.0|1.02183077|0.2|\n",
     "|BoC Discrete Total |1.69405223|3.29148364|3.55331481|0.33436809| -0.86039531| -0.34094576|9.25546417|0.|1.01629423|0.2 \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Jake Learning Pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "charlesDarwin = pd.Series([1,1,3,9])\n",
-    "charlesBarkley = pd.Series([6,6,6,6])\n",
-    "charlesLindbergh = pd.Series([8,7,5,4])\n",
-    "\n",
-    "timetomakeadataframe = pd.DataFrame(np.transpose(np.array([charlesDarwin,charlesBarkley,charlesLindbergh])))\n",
-    "timetomakeadataframe.columns = ['chuckyD','chuckyB','chuckyL']\n",
-    "\n",
-    "timetomakeadataframe['chuckyB'][(timetomakeadataframe['chuckyD']<4)&(timetomakeadataframe['chuckyL']>6)]=0\n",
-    "#timetomakeadataframe.where(timetomakeadataframe['chuckyL']==0).sum()\n",
-    "timetomakeadataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nationOfCheescakes = timetomakeadataframe[timetomakeadataframe['chuckyD']<4].copy()\n",
-    "nationOfCheescakes['chuckyB'][nationOfCheescakes['chuckyL']>6]=0\n",
-    "nationOfCheescakes[['chuckyB','chuckyL']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kingMidas = timetomakeadataframe['chuckyD']\n",
-    "kingMidas[0]=79\n",
-    "timetomakeadataframe\n",
-    "\n",
-    "kingTut = timetomakeadataframe['chuckyD'] + 1\n",
-    "kingTut[1] = -10\n",
-    "timetomakeadataframe"
    ]
   },
   {
